# sqmaps

./: .gitignore  COPYING  INSTALL  README  sqmaps.odg  sqmaps.xml
src/: CMakeLists.txt  Makefile  graph.c  main.c  ship.c  util.c
src/h/: const.h  graph.h  ship.h  types.h  util.h
xml/: ship-1.xml  ship-2.xml  ship.xsd
