PROJECT( sqmaps )

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

SET( CMAKE_C_FLAGS "-Wall -Werror -ansi -pedantic" )

# find libxml2
IF( WIN32 )
	SET( CMAKE_INCLUDE_PATH E:\\cygwin\\usr\\include )
	SET( LIBXML2_LIBRARIES E:\\cygwin\\lib\\libxml2.dll.a )
ENDIF( WIN32 )

FIND_PACKAGE( LibXml2 REQUIRED )
INCLUDE_DIRECTORIES( ${LIBXML2_INCLUDE_DIR} )
ADD_DEFINITIONS( ${LIBXML2_DEFINITIONS} )

ADD_EXECUTABLE ( sqm main.c ship.c util.c graph.c )

TARGET_LINK_LIBRARIES( sqm ${LIBXML2_LIBRARIES} )
